EEVEE Next: some lights from old file do not work #115289

Closed
opened 2023-11-23 07:26:32 +01:00 by Sun Kim · 0 comments
Contributor

System Information
Operating system: Windows 10
Graphics card: RTX 2060 Super

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: a13696a242fb
Worked: n/a

Short description of error

Light objects from an old file do not work or show glitch in EEVEE Next.

I opened a scene I made with older versions in 4.1 alpha, and noticed some lights do not work with EEVEE Next. Some show artifacts and some light outright do not illuminate the scene.

Below is a stripped down version of the scene.

File: eevee_next_light_issue.blend

I couldn't find the cause. It seems some objects are "defected". As demonstrated above if I link the light data of a broken light object to a working light object, it works normally.

**System Information** Operating system: Windows 10 Graphics card: RTX 2060 Super **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: `a13696a242fb` Worked: n/a **Short description of error** Light objects from an old file do not work or show glitch in EEVEE Next. I opened a scene I made with older versions in 4.1 alpha, and noticed some lights do not work with EEVEE Next. Some show artifacts and some light outright do not illuminate the scene. Below is a stripped down version of the scene. <video src="/attachments/71160abe-064b-4305-9d33-78f8b2b58f3d" title="eevee_next_light_issue.mp4" controls></video> File: [eevee_next_light_issue.blend](/attachments/50cfa07a-5fec-4dad-82a5-d8eae15e0d1a) I couldn't find the cause. It seems some objects are "defected". As demonstrated above if I link the light data of a broken light object to a working light object, it works normally.
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-23 07:26:32 +01:00
Pratik Borhade added
Module
EEVEE & Viewport
Status
Confirmed
Interest
EEVEE
and removed
Status
Needs Triage
labels 2023-11-23 10:13:30 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-07 17:08:33 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:03:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115289
No description provided.