Fix #115289: EEVEE-Next: Negative scale lights

There was code for ensuring correct handedness,
but it wasn't working since vec.xyz() doesn't return by reference.